kubernetes-project/cicd/tekton/ingress-tekton-dashboard.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  annotations:
    kubernetes.io/tls-acme: "false"
spec:
  rules:
  -
    host: tekton.158.160.5.137.nip.io
    http:
      paths: 
      -
        path: /
        pathType: Prefix
        backend:
          service:
            name: tekton-dashboard
            port:
              number: 9097
